# juzfedlom

./: .~lock.ARCHIVO 30.ods#  .~lock.ARCHIVO 5.ods#  .~lock.ARCHIVO 7.ods#  cargador.ipynb  entrantes.pkl  entrantes_01.pkl  feature.ipynb  llamadas_telefonicas.tex  normalizador_bc.ipynb  proceso.ipynb  pyproject.toml  requirements.txt  salientes.pkl  salientes_01.pkl
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  cargador-checkpoint.ipynb
